# autozen-auth-repo

./: .gitignore  Dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 33217647e1d1_.py
src/: .env  .env.example  main.py
src/application/: exceptions.py
src/application/services/: auth_service.py  bcrypt_password_hasher.py  jwt_service.py  password_hasher.py
src/application/use_cases/: auth_use_case.py  login.py  refresh.py  register.py
src/core/: config.py  exceptions.py  logger.py
src/core/middleware/: clients_filter_middleware.py  exception_middleware.py  exceptions_middleware.py
src/domain/: exceptions.py  models.py  schemas.py
src/domain/interfaces/: IPasswordHasher.py  auth_dto_interfaces.py  auth_service_interface.py  jwt_service_interface.py  password_hasher_interface.py  queue_listener_interface.py  user_adapter_interface.py  user_dto_interfaces.py
src/domain/models/: auth_requests.py  auth_responses.py  user.py  user_requests.py  user_responses.py
src/infrastructure/: database.py  exceptions.py
src/infrastructure/adapters/: rabbitmq_api_gateway_listener.py  rabbitmq_gateway_listener_adapter.py  rabbitmq_listener_adapter.py  rabbitmq_user_adapter.py
src/infrastructure/interfaces/: user_adapter_interface.py
src/presentation/api/v1/: auth_routes.py  rabbitmq_handler.py
