[project]
name = "autozen-auth-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Ruzhilov",email = "iruzhilov@gmail.com"}
]
license = {text = "Apache Liscense 2.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aio-pika (>=9.5.5,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
